--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=HPharmacy
 spring.datasource.url=jdbc:mysql://localhost:3306/HPharmacy?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=rootpassword
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -15,8 +14,6 @@ spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
 #spring.sql.init.data-locations=classpath:HPharmacydata.sql
 spring.jpa.defer-datasource-initialization=true
-#spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.location=/duong/dan/toi/uploads
 file.upload-dir=uploads/images/products
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
@@ -25,3 +22,6 @@ spring.thymeleaf.cache=false
 spring.mvc.throw-exception-if-no-handler-found=false
 spring.web.resources.chain.enabled=false
 logging.level.org.springframework.web.servlet.resource=ERROR
+#spring.datasource.hikari.maximum-pool-size=20
+#spring.datasource.hikari.minimum-idle=10
+#spring.datasource.hikari.idle-timeout=30000
