--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=mysql
 spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
-#spring.sql.init.data-locations=classpath:HPharmacydata.sql
+#
+spring.sql.init.data-locations=classpath:HPharmacydata.sql
 spring.jpa.defer-datasource-initialization=true
 file.upload-dir=uploads/images/products
 spring.thymeleaf.enabled=true
@@ -22,6 +23,4 @@ spring.thymeleaf.cache=false
 spring.mvc.throw-exception-if-no-handler-found=false
 spring.web.resources.chain.enabled=false
 logging.level.org.springframework.web.servlet.resource=ERROR
-#spring.datasource.hikari.maximum-pool-size=20
-#spring.datasource.hikari.minimum-idle=10
-#spring.datasource.hikari.idle-timeout=30000
+
